--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: var(--wb-font-text);
+    font-family: "MBCorpo Text", DaimlerCS-Regular, DaimlerCSArab-Regular, sans-serif;
 }
 .navbar{
     background-color: #131313;
@@ -28,7 +28,7 @@
 }
 #navbar__logo{
     background-color: white;
-    background-image: linear-gradient(to top, black 0%, rgb(0, 255, 0 ) 100%);
+    background-image: linear-gradient(to top, rgb(43, 41, 41) 0%, rgb(0, 255, 0 ) 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -55,7 +55,8 @@
     height: 80px;
 }
 
-.navbar__links{
+.navbar__links {
+    position: relative; 
     color: white;
     display: flex;
     align-items: center;
@@ -63,5 +64,102 @@
     text-decoration: none;
     padding: 0 1rem;
     height: 100%;
-    
+    font-size: 1rem;
+    cursor: pointer;
 }
+
+.navbar__links::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 10px; 
+    width: 0%;
+    height: 2px;
+    background-color: #00ff0d;
+    transition: width 0.3s ease-in-out;
+}
+
+.navbar__links:hover::after {
+    width: 100%;
+}
+
+@media  screen and(max-width: 960px) {
+    .navbar__container{
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1300px;
+        padding:0;
+    }
+
+    .navbar__menu{
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        /* top: -1000px;
+        opacity: 0; */
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
+        background: #131313;
+    }
+    .navbar__menu.active{
+        background-color: #131313;
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 50vh;
+        font-size: 1.6rem;
+    }
+
+    #navbar__logo{
+        padding-left: 25px;
+
+    }
+    .navbar_toggle .bar{
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background: #fff;
+    }
+
+    .navbar__item{
+        width: 100%;
+    }
+    .navbar__links{
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+
+    #mobile-menu{
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+
+    .navbar_toggle .bar{
+        display: block;
+        cursor: pointer;
+
+    }
+    #mobile-menu.is-active .bar:nth-child(2){
+        opacity:0;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(1){
+       transform: translateY(8px) rotate(45deg);
+    }
+    #mobile-menu.is-active .bar:nth-child(3){
+       transform: translateY(-8px) rotate(-45deg);
+    }
+}
+
