--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
     position: sticky;
     top: 0;
      z-index: 999; /*this is to ensure everything is above the content */
-     font-family: "MBCorpo Text", DaimlerCS-Regular, DaimlerCSArab-Regular, sans-serif;
-}
+     font-family: 'Poppins', sans-serif;
+    }
 
 .navbar__container{
     display: flex;
@@ -29,7 +29,7 @@
 }
 #navbar__logo{
     background-color: white;
-    background-image: linear-gradient(to top, rgb(43, 41, 41) 0%, rgb(0, 255, 0 ) 100%);
+    background-image: linear-gradient(to top, rgb(0, 0, 0) 12%,  rgb(255, 255, 255) 60%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -184,27 +184,34 @@
   } */
 .logo-img {
   height: 50px;      
-  width: auto;       /* keeps the image proportion correct */
+  width: auto;       
   object-fit: contain;
   margin-right: 10px;
 }
+
 .bg-video {
   width: 100%;
   height: auto;
   display: block;
   object-fit: contain;
 }
-
+.top__video {
+ 
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
 .animated-heading {
   display: inline-block;
-  font-family: 'Poppins', sans-serif; /* or any fancy font */
-  font-size: 3rem;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
   font-weight: 700;
-  color: #ffffff;
+  color: #888282;
   overflow: hidden;
   white-space: nowrap;
   animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
-  border-right: 2px solid white;
 }
 
 @keyframes typing {
@@ -215,6 +222,58 @@
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: white }
+}
+
+.main__content h1{
+  display: flex;
+  justify-content: center;   
+  align-items: center;       
+  text-align: center;
+}
+
+.why__us {
+  padding: 40px 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+   font-family: 'Poppins', sans-serif;
+}
+
+.why__us h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #112107;
+  font-family: 'Poppins', sans-serif;
+}
+
+.why__us p {
+  font-size: 1.2rem;
+  color: #555;
+  margin-bottom: 30px;
+  line-height: 1.6;
+}
+
+.why__us ul {
+  list-style: none;
+  padding: 0;
+  
+}
+
+.why__us li {
+  font-size: 1rem;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.footer__bottom {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 0.9rem;
+  border-top: 1px solid #2e4e4e;
+  padding-top: 15px;
+  background-color: #131313;
+  color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
 
